# agent-data-api

./: .env  .gitignore  Dockerfile  create_index.py  manage.py  requirements.txt
agent/: admin.py  models.py
agent/migrations/: 0001_initial.py  0002_agent_npn.py  0003_alter_agent_npn_alter_agent_phone_number.py
app/: __init__.py  create_index.py  forms.py  pyproject.toml  routes.py  serpapi_utils.py  setup.py  setup_db.py  utils.py  widgets.py
app/static/: scripts.js  styles.css
app/templates/: base.html  import_agents.html  index.html  saved_searches.html  serpapi_search.html
core/: admin.py  cache.py  core_json.py  dict_helper.py  errors.py  model_json.py  models.py  random_string.py  tests.py  views.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
search/: serpapi_utils.py  urls.py  views.py
server/: deploy.py  index_view.py  settings.py  urls.py
static/js/: common.js
templates/: base.html  index.html  login.html  search_results.html  serpapi_search.html  youtube_search.html
user/: admin.py  models.py  urls.py  validator.py  views.py
user/migrations/: 0001_initial.py
